--- a/WordToGitHub/src/app/file/file-detail.component.html
+++ b/WordToGitHub/src/app/file/file-detail.component.html
@@ -1,12 +1,21 @@
-﻿<article class="actions">
-    <h1 class="ms-landing-page__content__title ms-font-xl  ms-fontColor-neutralSecondary ms-fontWeight-light">UI under development</h1>
-    <div class="ms-landing-page-pushButton">
-        <button id="buttonPush" class="ms-Button" (click)="push()">Push</button>
-    </div>
-    <div class="ms-landing-page-discardButton">
-        <button id="buttonDiscard" class="ms-Button" (click)="discard()">Discard</button>
-    </div>
-    <div class="ms-landing-page-pullButton">
-        <button id="buttonPull" class="ms-Button" (click)="pull()">Pull</button>
+﻿<section class="file-detail__content">
+    <h1 class="file-detail__title ms-font-l ms-fontWeight-light">{{selectedFile}}</h1>
+    <!--<h2 class="file-detail__subtitle ms-font-m-plus ms-fontWeight-light">History</h2>
+    <div class="file-detail__commits">
+        <div class="file-detail-commit" *ngFor="let commit of (commits | async)">
+            <div class="file-detail-commit__avatar" [ngStyle]="{'background-image': 'url('+ commit?.author?.avatar_url +')'}"></div>
+            <div class="file-detail-commit__details">
+                <p class="ms-font-m file-detail-commit__message">{{commit?.commit?.message}}</p>
+                <p class="ms-font-s file-detail-commit__name">By {{commit?.commit?.author?.name}}</p>
+            </div>
+        </div>
+    </div>-->
+</section>
+<article class="file-detail__actions">
+    <a role="button" class="ms-font-s-plus file-detail__action file-detail__action--link" title="Open the file in a webpage on GitHub">View on GitHub</a>
+    <button id="buttonPush" class="ms-Button file-detail__action file-detail__action--primary" (click)="push()">Push</button>
+    <div class="file-detail__actions--row">
+        <button id="buttonDiscard" class="ms-Button file-detail__action file-detail__action--secondary file-detail__action--disabled" (click)="discard()">Discard</button>
+        <button id="buttonPull" class="ms-Button file-detail__action file-detail__action--secondary" (click)="pull()">Pull</button>
     </div>
 </article>
