--- a/WordToGitHub/src/styles/mixins/focus.states.scss
+++ b/WordToGitHub/src/styles/mixins/focus.states.scss
@@ -29,7 +29,7 @@
         }
     }
 
-    &.disabled {
+    &--disabled {
         opacity: 0.6;
         pointer-events: none;
         cursor: not-allowed;
