--- a/WordToGitHub/src/app/repo/repo.component.scss
+++ b/WordToGitHub/src/app/repo/repo.component.scss
@@ -101,3 +101,12 @@
         @include focus-states(transparent);
     }
 }
+
+.page-nav {
+    cursor:pointer;
+    padding: 20px;
+}
+
+#next {
+    padding-left: 209px;
+}
