updating meta information and making names uniform

--- a/WordToGitHub/src/app/components/hamburger/hamburger.component.html
+++ b/WordToGitHub/src/app/components/hamburger/hamburger.component.html
@@ -31,7 +31,7 @@
     </div>
     <footer class="hamburger-menu-footer ms-font-l">
         <ul class="menu-list menu-list--footer">
-            <li class="menu-list__item menu-list__item--subtle ms-font-l" (click)="signOut()"><i class="ms-Icon ms-Icon-large ms-Icon--oofReply"></i>Sign Out</li>
+            <li class="menu-list__item menu-list__item--subtle ms-font-l" (click)="signOut()"><i class="ms-Icon ms-Icon-large ms-Icon--oofReply"></i>Sign out</li>
         </ul>
     </footer>
 </section>
