--- a/WordToGitHub/src/app/file/file-tree.component.html
+++ b/WordToGitHub/src/app/file/file-tree.component.html
@@ -1,16 +1,18 @@
-﻿<ul class="ms-List">
-    <li class="file-tree-component__message ms-font-m" *ngIf="(files| async| mdfilter)?.length == 0">Seems like there are no 'Markdown' files in this folder. You could either create one or choose a different folder.</li>
-    <li class="file-tree-item ms-ListItem" *ngFor="let file of (files | async | mdfilter)" (click)="select(file)">
-        <div class="file-tree-item__icon"><i class="ms-Icon" [ngClass]="file.type === 'dir' ? 'ms-Icon-large ms-Icon--folder' : 'ms-Icon-large ms-Icon--document'"></i></div>
-        <div class="file-tree-item__content">
-            <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-font-m">{{file.name}}</p>
-        </div>
-    </li>
-    <li class="file-tree-item--separator"></li>
-    <li class="file-tree-item file-tree-item--alternate ms-ListItem" (click)="createFile()" >
-        <div class="file-tree-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themePrimary ms-Icon--plus"></i></div>
-        <div class="file-tree-item__content">
-            <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m" >Add a new file</p>
-        </div>
-    </li>
-</ul>
+﻿<div class="file-tree-component">
+    <ul class="file-tree-component__list ms-List">
+        <li class="file-tree-component__message ms-font-m" *ngIf="(files| async| mdfilter)?.length == 0">Seems like there are no 'Markdown' files in this folder. You could either create one or choose a different folder.</li>
+        <li class="file-tree-item ms-ListItem" *ngFor="let file of (files | async | mdfilter)" (click)="select(file)">
+            <div class="file-tree-item__icon"><i class="ms-Icon" [ngClass]="file.type === 'dir' ? 'ms-Icon-large ms-Icon--folder' : 'ms-Icon-large ms-Icon--document'"></i></div>
+            <div class="file-tree-item__content">
+                <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-font-m">{{file.name}}</p>
+            </div>
+        </li>
+        <li class="file-tree-item--separator"></li>
+        <li class="file-tree-item file-tree-item--alternate ms-ListItem" (click)="createFile()">
+            <div class="file-tree-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themePrimary ms-Icon--plus"></i></div>
+            <div class="file-tree-item__content">
+                <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m">Add a new file</p>
+            </div>
+        </li>
+    </ul>
+</div>
