--- a/WordToGitHub/src/styles/globals.scss
+++ b/WordToGitHub/src/styles/globals.scss
@@ -56,7 +56,7 @@ ul {
         flex: 1 1 0;
         @include flex();
         overflow: auto;
-        overflow-x: hidden;
+        overflow-x: hidden;        
     }
 
     &__footer {
@@ -67,4 +67,13 @@ ul {
         cursor: pointer;
         height: 80px;
     }
+}
+
+/* 
+    DIV created by Angular2 Router. Its marked as flex by default
+    and takes maximum available space 
+*/
+undefined {
+    @include flex();
+    flex: 1 1 100%;
 }
