--- a/WordToGitHub/src/app/file/file-create.component.scss
+++ b/WordToGitHub/src/app/file/file-create.component.scss
@@ -7,30 +7,151 @@
         width: calc(100% - 30px);
         border: none;
         border-top: 1px solid $background-light;
-    }   
+    }
+
+    &__header {
+        background-color: $background-primary;
+    }
+
+    &__form {
+        background-color: $background-primary;
+        flex: 1 1 100%;
+    }
 }
 
 .file-create-command-bar {
     @include inline-flex();
     list-style-type: none;
     width: 100%;
-    border-bottom: 1px solid $background-light;
+    margin-bottom: $default-spacing;
 
     &__command {
         padding: (40px - $default-spacing)/2 $default-spacing;
         @include focus-states($accent-background-primary, $accent-foreground-primary);
 
+        i {
+            position: relative;
+            top: 2px;
+            color: $foreground-white;
+        }
+
         &:hover i {
             color: $accent-foreground-primary;
         }
+    }
 
-        &--text {
-            flex: 1 1 0px;
-            @include ellipsis();
+    &__text {
+        padding: (40px - $default-spacing)/2 $default-spacing;
+        flex: 1 1 0px;
+        text-align: center;
+        @include ellipsis();
 
-            i {
-                padding-right: $default-spacing/2;
-            }
+        h1 {
+            color: $foreground-white;
         }
+    }
+}
+
+.file-create-form {
+    @include flex();
+    height: 100%;
+
+    &__section {
+        margin-bottom: $default-spacing;
+        padding: 0 $default-spacing;
+    }
+
+    &__label {
+        width: 100%;
+        color: $foreground-lighter;
+    }
+
+    &__text {
+        width: calc(100% - 15px);
+        height: calc(32px - 15px);
+        border: solid 1px $foreground-primary;
+        background: $foreground-primary;
+        color: $foreground-white;
+        font-size: 10pt;
+        margin-top: $default-spacing / 2;
+        padding: $default-spacing / 2;
+
+        &:hover {
+            background-color: $foreground-primary;
+        }
+
+        &:focus {
+            background-color: $foreground-primary;
+            border-color: $accent-background-primary;
+        }
+    }
+
+    &__check {
+        padding-right: $default-spacing / 2;
+    }
+
+    &__path {
+        color: $foreground-lightest;
+        white-space: pre-wrap;
+        word-break: break-all;
+        margin-top: $default-spacing/2;
+
+        &--folder {
+            color: #48a0fc;
+        }
+
+        &--file {
+            color: #3cc7ae;
+        }
+    }
+
+    &__templates {
+        list-style-type: none;
+        flex: 1 0 auto;
+    }
+
+    &__title {
+        color: $foreground-lightest;
+    }
+
+    &__submit {
+        width: 100%;
+        height: 32px;
+        text-align: center;
+        margin-bottom: $default-spacing;
+        border: none;
+        outline: none;
+
+        @include focus-states($accent-background-primary, $accent-foreground-primary);
+    }
+}
+
+.file-template-item {
+    padding: $default-spacing;
+    @include focus-states($accent-background-primary, $accent-foreground-primary);
+
+    &--selected {
+        background-color: $accent-background-primary;
+    }
+
+    &:hover,
+    &:active,
+    &--selected {
+        .file-template-item__title {
+            color: $accent-foreground-primary;
+        }
+
+        .file-template-item__description {
+            color: rgba($accent-foreground-primary, 0.6);
+        }
+    }
+
+    &__title {
+        color: $foreground-lightest;
+        margin-bottom: $default-spacing * 0.25;
+    }
+
+    &__description {
+        color: $foreground-light;
     }
 }
