completing ui changes to file-create

--- a/WordToGitHub/src/app/file/file-create.component.html
+++ b/WordToGitHub/src/app/file/file-create.component.html
@@ -28,37 +28,47 @@
         </section>
 
         <section class="file-create-form__section">
-
             <h2 class="file-create-form__title ms-font-l ms-fontweight-light">Templates</h2>
-            <p class="file-create-form__label ms-font-s ms-fontweight-light">Click on a template to load it in Word.</p>
+            <p class="file-create-form__label ms-font-s ms-fontweight-light">Choose a template from the list below to load it in Word.</p>
         </section>
 
-        <ul class="file-create-form__templates">
-            <li class="file-template-item file-template-item--selected">
-                <p class="file-template-item__title ms-font-m">Empty</p>
-                <p class="file-template-item__description ms-font-s">Creates a new empty markdown file</p>
-            </li>
-            <li class="file-template-item">
-                <p class="file-template-item__title ms-font-m">Basic</p>
-                <p class="file-template-item__description ms-font-s">Creates a basic markdown file</p>
-            </li>
-            <li class="file-template-item">
-                <p class="file-template-item__title ms-font-m">Readme</p>
-                <p class="file-template-item__description ms-font-s">Creates a new readme markdown file with all the required sections</p>
-            </li>
-            <li class="file-template-item">
-                <p class="file-template-item__title ms-font-m">API Documentation</p>
-                <p class="file-template-item__description ms-font-s">Creates a new api documentation markdown file with all the required sections</p>
-            </li>
-            <li class="file-template-item">
-                <p class="file-template-item__title ms-font-m">License</p>
-                <p class="file-template-item__description ms-font-s">Creates a new license markdown file</p>
-            </li>
-            <li class="file-template-item">
-                <p class="file-template-item__title ms-font-m">Contribution</p>
-                <p class="file-template-item__description ms-font-s">Creates a new contribution markdown file</p>
-            </li>
-        </ul>
+        <section class="file-create-form__section file-create-form__section--menu">
+            <article class="file-template-item file-template-item--selected">
+                <div class="file-template-item__left">
+                    <p class="file-template-item__title ms-font-m">Empty</p>
+                    <p class="file-template-item__description ms-font-s">Creates a new empty markdown file</p>
+                </div>
+                <div class="file-template-item__right">
+                    <i class="ms-Icon ms-Icon-large ms-Icon--chevronThinDown"></i>
+                </div>
+            </article>
+            <ul class="file-create-form__templates">
+                <li class="file-template-item">
+                    <p class="file-template-item__title ms-font-m">Empty</p>
+                    <p class="file-template-item__description ms-font-s">Creates a new empty markdown file</p>
+                </li>
+                <li class="file-template-item">
+                    <p class="file-template-item__title ms-font-m">Basic</p>
+                    <p class="file-template-item__description ms-font-s">Creates a basic markdown file</p>
+                </li>
+                <li class="file-template-item">
+                    <p class="file-template-item__title ms-font-m">Readme</p>
+                    <p class="file-template-item__description ms-font-s">Creates a new readme markdown file with all the required sections</p>
+                </li>
+                <li class="file-template-item">
+                    <p class="file-template-item__title ms-font-m">API Documentation</p>
+                    <p class="file-template-item__description ms-font-s">Creates a new api documentation markdown file with all the required sections</p>
+                </li>
+                <li class="file-template-item">
+                    <p class="file-template-item__title ms-font-m">License</p>
+                    <p class="file-template-item__description ms-font-s">Creates a new license markdown file</p>
+                </li>
+                <li class="file-template-item">
+                    <p class="file-template-item__title ms-font-m">Contribution</p>
+                    <p class="file-template-item__description ms-font-s">Creates a new contribution markdown file</p>
+                </li>
+            </ul>
+        </section>
 
         <section class="file-create-form__section">
             <input class="file-create-form__submit ms-font-m" type="submit" value="Create" />
