Working on images

--- a/WordToGitHub/src/app/file/file-detail.component.html
+++ b/WordToGitHub/src/app/file/file-detail.component.html
@@ -18,4 +18,5 @@
         <button id="buttonDiscard" class="ms-Button file-detail__action file-detail__action--secondary file-detail__action--disabled" (click)="discard()">Discard</button>
         <button id="buttonPull" class="ms-Button file-detail__action file-detail__action--secondary" (click)="pull()">Pull</button>
     </div>
+    <button id="buttonUploadImages" class="ms-Button file-detail__action file-detail__action--primary" (click)="uploadImages()">Upload Images</button>
 </article>
