fixing breadcrumb service display issue

--- a/WordToGitHub/src/app/file/file-list.component.html
+++ b/WordToGitHub/src/app/file/file-list.component.html
@@ -16,6 +16,6 @@
 </section>
 
 <section class="file-list-component__files">
-    <!--<breadcrumb max="2" (navigate)="navigate($event)"></breadcrumb>-->
+    <breadcrumb max="2" (navigate)="navigate($event)"></breadcrumb>
     <router-outlet></router-outlet>
 </section>
