--- a/WordToGitHub/src/app/file/file-create.component.html
+++ b/WordToGitHub/src/app/file/file-create.component.html
@@ -1,7 +1,9 @@
 ﻿<section class="file-create-component__header">
     <ul class="file-create-command-bar">
         <li class="file-create-command-bar__command"><i class="ms-Icon ms-Icon--chevronThinLeft"></i></li>
-        <li class="file-create-command-bar__text"><h1 class="ms-font-l ms-fontweight-light">New File</h1></li>
+        <li class="file-create-command-bar__text">
+            <h1 class="ms-font-l ms-fontweight-light">New File</h1>
+        </li>
     </ul>
 </section>
 
@@ -13,7 +15,7 @@
         </section>
 
         <section class="file-create-form__section">
-            <input class="file-create-form__checkbox" type="checkbox" name="newfolder" [(ngModel)]="newFolder"/>
+            <input class="file-create-form__checkbox" type="checkbox" name="newfolder" [(ngModel)]="newFolder" />
             <label class="file-create-form__label ms-font-s" for="newfolder">Create a new folder?</label>
         </section>
 
@@ -24,29 +26,23 @@
 
         <section class="file-create-form__section">
             <p class="file-create-form__label ms-font-s">Your file will be created at:</p>
-            <pre class="file-create-form__path">@{{selectedOrg}}/{{selectedRepoName}}/{{selectedBranch}}/<span [hidden]="selectedPath == 'null'">{{selectedPath}}/</span><span class="file-create-form__path--folder" [hidden]="!newFolder || selectedFolder?.length <= 0">{{selectedFolder}}</span><span [hidden]="!newFolder || selectedFolder?.length <= 0">/</span><span class="file-create-form__path--file">{{selectedFile}}</span></pre>
+            <pre class="file-create-form__path">@{{selectedOrg}}/{{selectedRepoName}}/{{selectedBranch}}/<span [hidden]="selectedPath == 'null'">{{selectedPath}}/</span>
+                <span class="file-create-form__path--folder" [hidden]="!newFolder || selectedFolder?.length <= 0">{{selectedFolder}}</span>
+                <span
+                    [hidden]="!newFolder || selectedFolder?.length <= 0">/</span><span class="file-create-form__path--file">{{selectedFile}}</span></pre>
         </section>
 
-        <section class="file-create-form__section">
+        <section class="file-create-form__section file-create-form__section--header">
             <h2 class="file-create-form__title ms-font-l ms-fontweight-light">Templates</h2>
             <p class="file-create-form__label ms-font-s ms-fontweight-light">Choose a template from the list below to load it in Word.</p>
         </section>
 
         <section class="file-create-form__section file-create-form__section--menu">
-            <article class="file-template-item file-template-item--selected">
-                <div class="file-template-item__left">
-                    <p class="file-template-item__title ms-font-m">{{selectedTemplate?.title}}</p>
-                    <p class="file-template-item__description ms-font-s">{{selectedTemplate?.description}}</p>
-                </div>
-                <div class="file-template-item__right">
-                    <i class="ms-Icon ms-Icon-large ms-Icon--chevronThinDown"></i>
-                </div>
-            </article>
             <ul class="file-create-form__templates">
-                <li class="file-template-item" *ngFor="let template of templates" (click)="selectedTemplate = template">
+                <li class="file-template-item file-template-item--selected" *ngFor="let template of templates" (click)="selectedTemplate = template">
                     <p class="file-template-item__title ms-font-m">{{template.title}}</p>
                     <p class="file-template-item__description ms-font-s">{{template.description}}</p>
-                </li>                
+                </li>
             </ul>
         </section>
 
