--- a/WordToGitHub/src/app/file/file-create.component.scss
+++ b/WordToGitHub/src/app/file/file-create.component.scss
@@ -65,6 +65,12 @@
             flex: 1 0 auto;
             position: relative;
         }
+
+        &--header {
+            padding-bottom: 20px;
+            margin-bottom: 0;
+            border-bottom: solid 1px rgba($foreground-light, 0.5);
+        }
     }
 
     &__label {
@@ -114,19 +120,8 @@
     &__templates {
         list-style-type: none;
         flex: 1 0 auto;
-        position: absolute;
-        top: 0;
         background-color: darken($background-primary, 10%);
-        display: none;
         width: 100%;
-        max-height: 300px;
-        overflow: auto;
-
-        &:hover,
-        &:active,
-        &:focus {
-            display: block;
-        }
     }
 
     &__title {
@@ -163,7 +158,6 @@
 
     &--selected {
         background-color: $background-primary;
-        @include inline-flex(null, center);
         width: calc(100% - 30px);
 
         .file-template-item__title {
@@ -172,13 +166,7 @@
 
         .file-template-item__description {
             color: $foreground-lighter;
-        }
-
-        &:hover + .file-create-form__templates,
-        &:focus + .file-create-form__templates,
-        &:active + .file-create-form__templates {
-            display: block;
-        }
+        }       
     }
 
     &__left {
