--- a/WordToGitHub/src/app/repo/repo.component.html
+++ b/WordToGitHub/src/app/repo/repo.component.html
@@ -13,9 +13,9 @@
 
 <section class="repo-list-component__repos">
     <h2 class="ms-font-xl ms-fontWeight-light">Repositories</h2>
-    <i id="prev" class="page-nav ms-Icon ms-Icon-large ms-Icon--chevronThinLeft" (click)="showPrevious()"></i>
-    <i id="next" class="page-nav ms-Icon ms-Icon-large ms-Icon--chevronThinRight" (click)="showNext()"></i>
-    <ul class="ms-List">
+    <!--<i id="prev" class="page-nav ms-Icon ms-Icon-large ms-Icon--chevronThinLeft" (click)="showPrevious()"></i>
+    <i id="next" class="page-nav ms-Icon ms-Icon-large ms-Icon--chevronThinRight" (click)="showNext()"></i>-->
+    <ul class="ms-List" infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" (scrolled)="showNext()">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of repositories">
             <div class="repo-list-item__content" (click)="selectRepo(repository)">
                 <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themeDark ms-font-m-plus">{{repository.name | safenames}}</p>
