finished paged repository list

--- a/WordToGitHub/src/app/file/file-tree.component.scss
+++ b/WordToGitHub/src/app/file/file-tree.component.scss
@@ -3,7 +3,7 @@
 
 .file-tree-component {
     @include flex();
-    height: 100%;
+    @include vScroll();
 
     &__title {
         padding: $default-spacing;
