--- a/WordToGitHub/src/app/repo/repo.component.html
+++ b/WordToGitHub/src/app/repo/repo.component.html
@@ -11,11 +11,9 @@
     </ul>
 </section>
 
-<section class="repo-list-component__repos">
+<section class="repo-list-component__repos" infinite-scroll (scrolled)="load()" [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" [scrollWindow]="false">
     <h2 class="ms-font-xl ms-fontWeight-light">Repositories</h2>
-    <!--<i id="prev" class="page-nav ms-Icon ms-Icon-large ms-Icon--chevronThinLeft" (click)="showPrevious()"></i>
-    <i id="next" class="page-nav ms-Icon ms-Icon-large ms-Icon--chevronThinRight" (click)="showNext()"></i>-->
-    <ul class="ms-List" infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" (scrolled)="showNext()">
+    <ul class="ms-List">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of repositories">
             <div class="repo-list-item__content" (click)="selectRepo(repository)">
                 <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themeDark ms-font-m-plus">{{repository.name | safenames}}</p>
@@ -23,9 +21,10 @@
                 <p class="repo-list-item__tertiary-text ms-ListItem-tertiaryText ms-font-s">{{repository.description}}</p>
             </div>
             <div class="repo-list-item__actions ms-ListItem-actions">
-                <div class="repo-list-item__action ms-ListItem-action"><i class="ms-Icon ms-Icon-large ms-Icon--starEmpty" (click)="pin(repository)"></i></div>
+                <div class="repo-list-item__action ms-ListItem-action">
+                    <i class="ms-Icon ms-Icon-large ms-Icon--starEmpty" (click)="pin(repository)"></i>
+                </div>
             </div>
         </li>
     </ul>
 </section>
-
