--- a/WordToGitHub/src/styles/mixins.scss
+++ b/WordToGitHub/src/styles/mixins.scss
@@ -3,3 +3,4 @@
 @import 'mixins/ellipsis.scss';
 @import 'mixins/focus.states.scss';
 @import 'mixins/keyframes.scss';
+@import 'mixins/scroll.scss';
